syntax = 'proto2';

message BlockAsset {
	required uint32 maxHeightPreviouslyForged = 1;
	required uint32 maxHeightPrevoted = 2;
	required bytes seedReveal = 3;
}

message BlockHeader {
	required uint32 version = 1;
	required uint32 timestamp = 2;
	required uint32 height = 3;
	required bytes previousBlockID = 4;
	required bytes transactionRoot = 5;
	required bytes generatorPublicKey = 6;
	required uint64 reward = 7;
	required bytes asset = 8;
	required bytes signature = 9;
}

message BaseTransaction {
	required uint32 moduleID = 1;
	required uint32 assetID = 2;
	required uint64 nonce = 3;
	required uint64 fee = 4;
	required bytes senderPublicKey = 5;
	required bytes asset = 6;
	repeated bytes signatures = 7;
}

message Vote {
		required bytes validatorAddress = 1;
		required sint64 amount = 2;
}

message VoteTransaction {
	repeated Vote stakes = 1;
}

message MultisigTransaction {
	required uint32 numberOfSignatures = 1;
	repeated bytes mandatoryKeys = 2;
	repeated bytes optionalKeys = 3;
}

message Block {
	required bytes header = 1;
	repeated bytes payload = 2;
}

message Keys {
	required uint32 numberOfSignatures = 1;
	repeated bytes mandatoryKeys = 2;
	repeated bytes optionalKeys = 3;
}

message Validator {
	required string username = 1;
	repeated uint32 pomHeights = 2 [packed=true];
	required uint32 consecutiveMissedBlocks = 3;
	required uint32 lastForgedHeight = 4;
	required bool isBanned = 5;
	required uint64 totalStakeReceived = 6;
}

message SentVotes {
	required bytes validatorAddress = 1;
	required uint64 amount = 2;
}

message Unlocking {
	required bytes validatorAddress = 1;
	required uint64 amount = 2;
	required uint32 unstakeHeight = 3;
}

message Asset {
	required Validator validator = 1;
	repeated SentVotes sentStakes = 2;
	repeated Unlocking unlocking = 3;
}

message GenesisAccount {
	required bytes address = 1;
	required uint64 balance = 2;
	required bytes publicKey = 3;
	required uint64 nonce = 4;
	required Keys keys = 5;
	required Asset asset = 6;
}

message GenesisBlockAsset {
	repeated GenesisAccount accounts = 1;
	repeated bytes initValidators = 2;
	required uint32 initRounds = 3;
}
